--- a/user.html
+++ b/user.html
@@ -37,6 +37,15 @@
                     <button type="submit" onclick="SubmitTransaction()">Submit</button>
                 </div>
             </div>
+            <div class="row px-2 fixed-bottom">
+                <iframe
+                    id="FrameID"
+                    title="Inline Frame Example"
+                    width="100%"
+                    height="500px"
+                    src="./view">
+                </iframe>
+            </div>
         </div>
         <script>
             async function SubmitTransaction(){
@@ -55,6 +64,8 @@
                         "Content-type": "application/json; charset=UTF-8"
                     }
                 });
+
+                document.getElementById('FrameID').contentWindow.location.reload(true);
             }
         </script>
     </body>
